Practica03/bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : lista_definicion_variables lista_definicion_funciones FUNC MAIN '(' ')' '{' lista_definicion_variables lista_sentencias '}'

   2  lista_definicion_variables : lista_definicion_variables definicion_variable
   3                             |

   4  definicion_variable : VAR variable ';'

   5  lista_definicion_funciones : lista_definicion_funciones definicion_funcion
   6                             |

   7  definicion_funcion : FUNC IDENT '(' lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'

   8  tipo_retorno : tipo
   9               |

  10  lista_parametros_opt : lista_parametros
  11                       |

  12  lista_parametros : lista_parametros ',' parametro
  13                   | parametro

  14  parametro : IDENT tipo

  15  variable : variable_simple
  16           | variable_struct

  17  variable_simple : identificadores tipo_variable

  18  variable_struct : IDENT STRUCT '{' registros_struct '}'

  19  registros_struct : registro_struct
  20                   | registros_struct registro_struct

  21  registro_struct : IDENT tipo_variable ';'

  22  tipo_variable : tipo
  23                | tipo_vector

  24  tipo : INT
  25       | FLOAT32
  26       | CHAR

  27  tipo_vector : corchetes_tam tipo

  28  corchetes_tam : '[' expresion ']'
  29                | corchetes_tam '[' expresion ']'

  30  identificadores : IDENT
  31                  | identificadores ',' IDENT

  32  lista_sentencias : lista_sentencias sentencia
  33                   |

  34  sentencia : expresion '=' expresion ';'
  35            | IF expresion '{' lista_sentencias '}'
  36            | IF expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'
  37            | WHILE expresion '{' lista_sentencias '}'
  38            | IDENT '(' lista_expresiones_opt ')' ';'
  39            | WRITE '(' lista_expresiones ')' ';'
  40            | READ '(' lista_expresiones ')' ';'
  41            | RETURN expresion ';'

  42  cast : tipo '(' expresion ')'

  43  lista_expresiones_opt : lista_expresiones
  44                        |

  45  lista_expresiones : lista_expresiones ',' expresion
  46                    | expresion

  47  expresion : expresion '+' expresion
  48            | expresion '*' expresion
  49            | expresion '/' expresion
  50            | IDENT corchetes_tam
  51            | IDENT '(' lista_expresiones_opt ')'
  52            | expresion '%' expresion
  53            | expresion '-' expresion
  54            | cast
  55            | '-' expresion
  56            | '(' expresion ')'
  57            | '[' expresion ']'
  58            | expresion AND expresion
  59            | expresion OR expresion
  60            | expresion IGUAL_IGUAL expresion
  61            | expresion MAYOR_IGUAL expresion
  62            | expresion MENOR_IGUAL expresion
  63            | expresion DISTINTO expresion
  64            | expresion '>' expresion
  65            | expresion '<' expresion
  66            | '!' expresion
  67            | expresion '.' expresion
  68            | CTE_ENTERA
  69            | CTE_REAL
  70            | CTE_CARACTER
  71            | IDENT

state 0
	$accept : . programa $end  (0)
	lista_definicion_variables : .  (3)

	.  reduce 3

	programa  goto 1
	lista_definicion_variables  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : lista_definicion_variables . lista_definicion_funciones FUNC MAIN '(' ')' '{' lista_definicion_variables lista_sentencias '}'  (1)
	lista_definicion_variables : lista_definicion_variables . definicion_variable  (2)
	lista_definicion_funciones : .  (6)

	VAR  shift 3
	FUNC  reduce 6

	lista_definicion_funciones  goto 4
	definicion_variable  goto 5


state 3
	definicion_variable : VAR . variable ';'  (4)

	IDENT  shift 6
	.  error

	variable  goto 7
	variable_simple  goto 8
	variable_struct  goto 9
	identificadores  goto 10


state 4
	programa : lista_definicion_variables lista_definicion_funciones . FUNC MAIN '(' ')' '{' lista_definicion_variables lista_sentencias '}'  (1)
	lista_definicion_funciones : lista_definicion_funciones . definicion_funcion  (5)

	FUNC  shift 11
	.  error

	definicion_funcion  goto 12


state 5
	lista_definicion_variables : lista_definicion_variables definicion_variable .  (2)

	.  reduce 2


state 6
	variable_struct : IDENT . STRUCT '{' registros_struct '}'  (18)
	identificadores : IDENT .  (30)

	STRUCT  shift 13
	INT  reduce 30
	FLOAT32  reduce 30
	CHAR  reduce 30
	'['  reduce 30
	','  reduce 30


state 7
	definicion_variable : VAR variable . ';'  (4)

	';'  shift 14
	.  error


state 8
	variable : variable_simple .  (15)

	.  reduce 15


state 9
	variable : variable_struct .  (16)

	.  reduce 16


state 10
	variable_simple : identificadores . tipo_variable  (17)
	identificadores : identificadores . ',' IDENT  (31)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	'['  shift 18
	','  shift 19
	.  error

	tipo  goto 20
	tipo_variable  goto 21
	tipo_vector  goto 22
	corchetes_tam  goto 23


state 11
	programa : lista_definicion_variables lista_definicion_funciones FUNC . MAIN '(' ')' '{' lista_definicion_variables lista_sentencias '}'  (1)
	definicion_funcion : FUNC . IDENT '(' lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (7)

	MAIN  shift 24
	IDENT  shift 25
	.  error


state 12
	lista_definicion_funciones : lista_definicion_funciones definicion_funcion .  (5)

	.  reduce 5


state 13
	variable_struct : IDENT STRUCT . '{' registros_struct '}'  (18)

	'{'  shift 26
	.  error


state 14
	definicion_variable : VAR variable ';' .  (4)

	.  reduce 4


state 15
	tipo : INT .  (24)

	.  reduce 24


state 16
	tipo : FLOAT32 .  (25)

	.  reduce 25


state 17
	tipo : CHAR .  (26)

	.  reduce 26


state 18
	corchetes_tam : '[' . expresion ']'  (28)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 36
	cast  goto 37


state 19
	identificadores : identificadores ',' . IDENT  (31)

	IDENT  shift 38
	.  error


state 20
	tipo_variable : tipo .  (22)

	.  reduce 22


state 21
	variable_simple : identificadores tipo_variable .  (17)

	.  reduce 17


state 22
	tipo_variable : tipo_vector .  (23)

	.  reduce 23


state 23
	tipo_vector : corchetes_tam . tipo  (27)
	corchetes_tam : corchetes_tam . '[' expresion ']'  (29)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	'['  shift 39
	.  error

	tipo  goto 40


state 24
	programa : lista_definicion_variables lista_definicion_funciones FUNC MAIN . '(' ')' '{' lista_definicion_variables lista_sentencias '}'  (1)

	'('  shift 41
	.  error


state 25
	definicion_funcion : FUNC IDENT . '(' lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (7)

	'('  shift 42
	.  error


state 26
	variable_struct : IDENT STRUCT '{' . registros_struct '}'  (18)

	IDENT  shift 43
	.  error

	registros_struct  goto 44
	registro_struct  goto 45


state 27
	expresion : IDENT . corchetes_tam  (50)
	expresion : IDENT . '(' lista_expresiones_opt ')'  (51)
	expresion : IDENT .  (71)

	'['  shift 18
	'('  shift 46
	IGUAL_IGUAL  reduce 71
	MAYOR_IGUAL  reduce 71
	MENOR_IGUAL  reduce 71
	DISTINTO  reduce 71
	'='  reduce 71
	AND  reduce 71
	OR  reduce 71
	'>'  reduce 71
	'<'  reduce 71
	'+'  reduce 71
	'-'  reduce 71
	'*'  reduce 71
	'/'  reduce 71
	'%'  reduce 71
	']'  reduce 71
	'.'  reduce 71
	')'  reduce 71
	'{'  reduce 71
	';'  reduce 71
	','  reduce 71

	corchetes_tam  goto 47


state 28
	expresion : CTE_ENTERA .  (68)

	.  reduce 68


state 29
	expresion : CTE_REAL .  (69)

	.  reduce 69


state 30
	expresion : CTE_CARACTER .  (70)

	.  reduce 70


state 31
	expresion : '-' . expresion  (55)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 48
	cast  goto 37


state 32
	expresion : '!' . expresion  (66)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 49
	cast  goto 37


state 33
	expresion : '[' . expresion ']'  (57)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 50
	cast  goto 37


state 34
	expresion : '(' . expresion ')'  (56)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 51
	cast  goto 37


state 35
	cast : tipo . '(' expresion ')'  (42)

	'('  shift 52
	.  error


state 36
	corchetes_tam : '[' expresion . ']'  (28)
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '*' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . AND expresion  (58)
	expresion : expresion . OR expresion  (59)
	expresion : expresion . IGUAL_IGUAL expresion  (60)
	expresion : expresion . MAYOR_IGUAL expresion  (61)
	expresion : expresion . MENOR_IGUAL expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . '<' expresion  (65)
	expresion : expresion . '.' expresion  (67)

	IGUAL_IGUAL  shift 53
	MAYOR_IGUAL  shift 54
	MENOR_IGUAL  shift 55
	DISTINTO  shift 56
	AND  shift 57
	OR  shift 58
	'>'  shift 59
	'<'  shift 60
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'%'  shift 65
	']'  shift 66
	'.'  shift 67
	.  error


state 37
	expresion : cast .  (54)

	.  reduce 54


state 38
	identificadores : identificadores ',' IDENT .  (31)

	.  reduce 31


state 39
	corchetes_tam : corchetes_tam '[' . expresion ']'  (29)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 68
	cast  goto 37


state 40
	tipo_vector : corchetes_tam tipo .  (27)

	.  reduce 27


state 41
	programa : lista_definicion_variables lista_definicion_funciones FUNC MAIN '(' . ')' '{' lista_definicion_variables lista_sentencias '}'  (1)

	')'  shift 69
	.  error


state 42
	definicion_funcion : FUNC IDENT '(' . lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (7)
	lista_parametros_opt : .  (11)

	IDENT  shift 70
	')'  reduce 11

	lista_parametros_opt  goto 71
	lista_parametros  goto 72
	parametro  goto 73


state 43
	registro_struct : IDENT . tipo_variable ';'  (21)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	'['  shift 18
	.  error

	tipo  goto 20
	tipo_variable  goto 74
	tipo_vector  goto 22
	corchetes_tam  goto 23


state 44
	variable_struct : IDENT STRUCT '{' registros_struct . '}'  (18)
	registros_struct : registros_struct . registro_struct  (20)

	IDENT  shift 43
	'}'  shift 75
	.  error

	registro_struct  goto 76


state 45
	registros_struct : registro_struct .  (19)

	.  reduce 19


state 46
	expresion : IDENT '(' . lista_expresiones_opt ')'  (51)
	lista_expresiones_opt : .  (44)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	')'  reduce 44

	tipo  goto 35
	expresion  goto 77
	lista_expresiones_opt  goto 78
	lista_expresiones  goto 79
	cast  goto 37


state 47
	corchetes_tam : corchetes_tam . '[' expresion ']'  (29)
	expresion : IDENT corchetes_tam .  (50)

	'['  shift 39
	IGUAL_IGUAL  reduce 50
	MAYOR_IGUAL  reduce 50
	MENOR_IGUAL  reduce 50
	DISTINTO  reduce 50
	'='  reduce 50
	AND  reduce 50
	OR  reduce 50
	'>'  reduce 50
	'<'  reduce 50
	'+'  reduce 50
	'-'  reduce 50
	'*'  reduce 50
	'/'  reduce 50
	'%'  reduce 50
	']'  reduce 50
	'.'  reduce 50
	')'  reduce 50
	'{'  reduce 50
	';'  reduce 50
	','  reduce 50


state 48
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '*' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : '-' expresion .  (55)
	expresion : expresion . AND expresion  (58)
	expresion : expresion . OR expresion  (59)
	expresion : expresion . IGUAL_IGUAL expresion  (60)
	expresion : expresion . MAYOR_IGUAL expresion  (61)
	expresion : expresion . MENOR_IGUAL expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . '<' expresion  (65)
	expresion : expresion . '.' expresion  (67)

	'.'  shift 67
	IGUAL_IGUAL  reduce 55
	MAYOR_IGUAL  reduce 55
	MENOR_IGUAL  reduce 55
	DISTINTO  reduce 55
	'='  reduce 55
	AND  reduce 55
	OR  reduce 55
	'>'  reduce 55
	'<'  reduce 55
	'+'  reduce 55
	'-'  reduce 55
	'*'  reduce 55
	'/'  reduce 55
	'%'  reduce 55
	']'  reduce 55
	')'  reduce 55
	'{'  reduce 55
	';'  reduce 55
	','  reduce 55


state 49
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '*' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . AND expresion  (58)
	expresion : expresion . OR expresion  (59)
	expresion : expresion . IGUAL_IGUAL expresion  (60)
	expresion : expresion . MAYOR_IGUAL expresion  (61)
	expresion : expresion . MENOR_IGUAL expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . '<' expresion  (65)
	expresion : '!' expresion .  (66)
	expresion : expresion . '.' expresion  (67)

	'.'  shift 67
	IGUAL_IGUAL  reduce 66
	MAYOR_IGUAL  reduce 66
	MENOR_IGUAL  reduce 66
	DISTINTO  reduce 66
	'='  reduce 66
	AND  reduce 66
	OR  reduce 66
	'>'  reduce 66
	'<'  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	'*'  reduce 66
	'/'  reduce 66
	'%'  reduce 66
	']'  reduce 66
	')'  reduce 66
	'{'  reduce 66
	';'  reduce 66
	','  reduce 66


state 50
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '*' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : '[' expresion . ']'  (57)
	expresion : expresion . AND expresion  (58)
	expresion : expresion . OR expresion  (59)
	expresion : expresion . IGUAL_IGUAL expresion  (60)
	expresion : expresion . MAYOR_IGUAL expresion  (61)
	expresion : expresion . MENOR_IGUAL expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . '<' expresion  (65)
	expresion : expresion . '.' expresion  (67)

	IGUAL_IGUAL  shift 53
	MAYOR_IGUAL  shift 54
	MENOR_IGUAL  shift 55
	DISTINTO  shift 56
	AND  shift 57
	OR  shift 58
	'>'  shift 59
	'<'  shift 60
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'%'  shift 65
	']'  shift 80
	'.'  shift 67
	.  error


state 51
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '*' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : '(' expresion . ')'  (56)
	expresion : expresion . AND expresion  (58)
	expresion : expresion . OR expresion  (59)
	expresion : expresion . IGUAL_IGUAL expresion  (60)
	expresion : expresion . MAYOR_IGUAL expresion  (61)
	expresion : expresion . MENOR_IGUAL expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . '<' expresion  (65)
	expresion : expresion . '.' expresion  (67)

	IGUAL_IGUAL  shift 53
	MAYOR_IGUAL  shift 54
	MENOR_IGUAL  shift 55
	DISTINTO  shift 56
	AND  shift 57
	OR  shift 58
	'>'  shift 59
	'<'  shift 60
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'%'  shift 65
	'.'  shift 67
	')'  shift 81
	.  error


state 52
	cast : tipo '(' . expresion ')'  (42)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 82
	cast  goto 37


state 53
	expresion : expresion IGUAL_IGUAL . expresion  (60)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 83
	cast  goto 37


state 54
	expresion : expresion MAYOR_IGUAL . expresion  (61)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 84
	cast  goto 37


state 55
	expresion : expresion MENOR_IGUAL . expresion  (62)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 85
	cast  goto 37


state 56
	expresion : expresion DISTINTO . expresion  (63)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 86
	cast  goto 37


state 57
	expresion : expresion AND . expresion  (58)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 87
	cast  goto 37


state 58
	expresion : expresion OR . expresion  (59)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 88
	cast  goto 37


state 59
	expresion : expresion '>' . expresion  (64)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 89
	cast  goto 37


state 60
	expresion : expresion '<' . expresion  (65)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 90
	cast  goto 37


state 61
	expresion : expresion '+' . expresion  (47)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 91
	cast  goto 37


state 62
	expresion : expresion '-' . expresion  (53)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 92
	cast  goto 37


state 63
	expresion : expresion '*' . expresion  (48)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 93
	cast  goto 37


state 64
	expresion : expresion '/' . expresion  (49)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 94
	cast  goto 37


state 65
	expresion : expresion '%' . expresion  (52)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 95
	cast  goto 37


state 66
	corchetes_tam : '[' expresion ']' .  (28)

	.  reduce 28


state 67
	expresion : expresion '.' . expresion  (67)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	IDENT  shift 27
	CTE_ENTERA  shift 28
	CTE_REAL  shift 29
	CTE_CARACTER  shift 30
	'-'  shift 31
	'!'  shift 32
	'['  shift 33
	'('  shift 34
	.  error

	tipo  goto 35
	expresion  goto 96
	cast  goto 37


state 68
	corchetes_tam : corchetes_tam '[' expresion . ']'  (29)
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '*' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . AND expresion  (58)
	expresion : expresion . OR expresion  (59)
	expresion : expresion . IGUAL_IGUAL expresion  (60)
	expresion : expresion . MAYOR_IGUAL expresion  (61)
	expresion : expresion . MENOR_IGUAL expresion  (62)
	expresion : expresion . DISTINTO expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . '<' expresion  (65)
	expresion : expresion . '.' expresion  (67)

	IGUAL_IGUAL  shift 53
	MAYOR_IGUAL  shift 54
	MENOR_IGUAL  shift 55
	DISTINTO  shift 56
	AND  shift 57
	OR  shift 58
	'>'  shift 59
	'<'  shift 60
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'%'  shift 65
	']'  shift 97
	'.'  shift 67
	.  error


state 69
	programa : lista_definicion_variables lista_definicion_funciones FUNC MAIN '(' ')' . '{' lista_definicion_variables lista_sentencias '}'  (1)

	'{'  shift 98
	.  error


state 70
	parametro : IDENT . tipo  (14)

	INT  shift 15
	FLOAT32  shift 16
	CHAR  shift 17
	.  error

	tipo  goto 99


state 71
	definicion_funcion : FUNC IDENT '(' lista_parametros_opt . ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (7)

	')'  shift 100
	.  error


state 72
	lista_parametros_opt : lista_parametros .  (10)
	lista_parametros : lista_parametros . ',' parametro  (12)

	','  shift 101
	')'  reduce 10


state 73
	lista_parametros : parametro .  (13)

	.  reduce 13


state 74
	registro_struct : IDENT tipo_variable . ';'  (21)

	';'  shift 102
	.  error


state 75
	variable_struct : IDENT STRUCT '{' registros_struct '}' .  (18)

	.  reduce 18


state 76
	registros_struct : registros_struct registro_struct .  (20)

	.  reduce 20

